[gd_scene load_steps=15 format=3 uid="uid://cdgj8vys8bcxn"]

[ext_resource type="Script" path="res://player.gd" id="1_8y1yq"]
[ext_resource type="PackedScene" uid="uid://ca2yxhw14xdsw" path="res://asset/Rogue_Hooded.glb" id="1_hytx0"]
[ext_resource type="Texture2D" uid="uid://b44155gknoj5w" path="res://asset/star_09.png" id="3_rqsli"]
[ext_resource type="PackedScene" uid="uid://crw6058uj66ek" path="res://asset/health_bar_3d.tscn" id="4_bx48x"]

[sub_resource type="Gradient" id="Gradient_u3dki"]
offsets = PackedFloat32Array(0, 0.145455, 1)
colors = PackedColorArray(0, 0, 0, 0.0117647, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2kt3q"]
gradient = SubResource("Gradient_u3dki")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rnmdx"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_2kt3q")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gi33b"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.854902, 0, 0, 1)
albedo_texture = ExtResource("3_rqsli")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_204nm"]
material = SubResource("StandardMaterial3D_gi33b")
size = Vector2(1.5, 1.5)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xxmts"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ns7f"]
albedo_color = Color(0.956863, 0.384314, 0.0862745, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5vcst"]
size = Vector3(1.41626, 1.57156, 1.62245)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_78ypq"]
radius = 0.997077
height = 2.84956

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kgtmt"]
properties/0/path = NodePath(".:syncPos")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:syncState")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:synchealth")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:syncPos1")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:attack")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:players_info")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="player" groups=["player"] instance=ExtResource("1_hytx0")]
collision_layer = 3
safe_margin = 0.05
script = ExtResource("1_8y1yq")

[node name="Skeleton3D" parent="Rig" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0163164, -0.755, 0.00210087)
bones/1/position = Vector3(0, 0.392064, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, 0, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.559906, -0.0608803, -0.643974, 0.517779)
bones/5/rotation = Quaternion(3.65498e-08, -4.88301e-08, -0.494719, 0.869053)
bones/7/rotation = Quaternion(-0.321065, -0.325319, 0.145726, 0.87741)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(-3.6586e-09, 6.87811e-09, -0.707107, 0.707107)
bones/10/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/10/rotation = Quaternion(-0.618244, 0.0807286, 0.618012, 0.478873)
bones/11/rotation = Quaternion(2.09853e-08, 5.12855e-08, 0.517939, 0.855417)
bones/13/rotation = Quaternion(-0.319291, 0.300524, -0.22735, 0.869512)
bones/14/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/14/rotation = Quaternion(-1.02444e-09, -4.24391e-09, 0.707107, 0.707107)
bones/19/rotation = Quaternion(-5.8061e-11, -0.0313416, -1.88013e-09, 0.999509)
bones/21/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/21/rotation = Quaternion(0.996185, 0.0479136, 0.0566427, -0.045939)
bones/22/rotation = Quaternion(0.165014, 6.49414e-08, -1.11408e-07, 0.986291)
bones/23/rotation = Quaternion(-0.533729, -0.260895, -1.72985e-05, 0.804405)
bones/24/rotation = Quaternion(-2.32092e-08, 0.920355, -0.391084, 7.25743e-08)
bones/25/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/25/rotation = Quaternion(0.997322, -0.0294574, 0.0315293, 0.0590483)
bones/26/rotation = Quaternion(0.274008, -6.38135e-08, 1.92761e-07, 0.961727)
bones/27/rotation = Quaternion(-0.559039, 0.114513, -0.00862763, 0.82115)
bones/28/rotation = Quaternion(3.03597e-08, 0.920355, -0.391084, -6.95338e-08)
bones/29/rotation = Quaternion(0.707107, -2.29302e-07, -4.60551e-08, 0.707107)
bones/30/position = Vector3(0.213918, 0.0259903, 0.173866)
bones/30/rotation = Quaternion(-0.705092, 0.0533355, 0.0533355, 0.705092)
bones/31/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/32/position = Vector3(-1.11482e-08, 0.213436, -5.36347e-09)
bones/32/rotation = Quaternion(-1.10961e-07, 0.391084, 0.920355, -2.67919e-08)
bones/33/position = Vector3(-6.31128e-09, 0.16565, -7.10267e-09)
bones/34/rotation = Quaternion(1, -8.27364e-11, 1.94627e-07, -7.45058e-09)
bones/36/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/37/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/38/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/39/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/39/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/40/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/41/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/43/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/44/position = Vector3(0.520841, 0.788312, -0.0576373)
bones/44/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/45/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/46/position = Vector3(-0.510844, 0.788312, 0.0597369)
bones/46/rotation = Quaternion(0.758253, 1.52737e-07, -0.651961, 1.11759e-08)

[node name="Knife" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(2.72302e-07, -0.149894, 0.988701, 0.999999, -1.11461e-06, -7.61174e-07, 1.54153e-06, 0.988701, 0.149894, -0.491058, 0.64103, 0.10658)

[node name="GPUParticles3D" type="GPUParticles3D" parent="Rig/Skeleton3D/Knife/Knife" index="0"]
transform = Transform3D(-0.997266, 0.0737303, -0.00474055, -0.0686938, -0.948939, -0.30789, -0.0271994, -0.306723, 0.95141, 0.117555, 1.23637, 0.00128672)
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_rnmdx")
draw_pass_1 = SubResource("PlaneMesh_204nm")

[node name="Throwable" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(2.88042e-07, -0.149894, 0.988701, 0.999999, -1.09988e-06, -7.7486e-07, 1.52901e-06, 0.988701, 0.149894, -0.518076, 0.641029, 0.28479)

[node name="Rogue_Cape" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(0.996275, -5.14962e-09, 0.0862354, 5.13044e-09, 1, 4.44078e-10, -0.0862354, 1.46374e-15, 0.996275, -4.17227e-09, 1.20227, 1.18859e-15)

[node name="Rogue_Cape" parent="Rig/Skeleton3D/Rogue_Cape" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_xxmts")

[node name="Rogue_Body" parent="Rig/Skeleton3D" index="5"]
surface_material_override/0 = SubResource("StandardMaterial3D_1ns7f")

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Idle"

[node name="Node3D" type="Node3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Node3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.53674e-07, 0.0194778, 19.9753)
projection = 1
current = true
size = 16.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 0.999999, -0.0018326, 0, 0.0018326, 0.999999, 0.0217957, 0.290257, -0.257061)
shape = SubResource("BoxShape3D_5vcst")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="4"]
avoidance_enabled = true
radius = 1.0
neighbor_distance = 1.0

[node name="Marker3D" type="Marker3D" parent="." index="5"]

[node name="Marker3D" type="Marker3D" parent="Marker3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.670917, -1.73151)

[node name="Area3D" type="Area3D" parent="Marker3D/Marker3D" index="0"]
transform = Transform3D(-0.999998, 0, -0.00174533, 0, 1, 0, 0.00174533, 0, -0.999998, 0.0950772, -0.448199, -0.725721)
collision_priority = 3.0
priority = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Marker3D/Marker3D/Area3D" index="0"]
transform = Transform3D(1.00003, -0.00174273, 0.00165017, 0.00174278, 0.0545494, -0.998539, 0.00165017, 0.99851, 0.0545539, 0.0665852, 0.00508547, -0.345067)
shape = SubResource("CapsuleShape3D_78ypq")

[node name="HealthBar3D" parent="." index="6" instance=ExtResource("4_bx48x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00309862, 3.01081, -0.340343)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." index="7"]
replication_config = SubResource("SceneReplicationConfig_kgtmt")

[node name="Timer" type="Timer" parent="." index="8"]

[node name="hittimer" type="Timer" parent="." index="9"]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="Marker3D/Marker3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Marker3D/Marker3D/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="input_event" from="Marker3D/Marker3D/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="timeout" from="hittimer" to="." method="_on_hittimer_timeout"]
